changed img file ext

--- a/gallery.html
+++ b/gallery.html
@@ -126,21 +126,21 @@
           </div>
 
           <div class="thumbnail iso-theatre">
-            <a href="img/gallery/theatre-shows06.JPG">
-              <img src="img/gallery/theatre-shows06.JPG" alt="Theatre Show">
+            <a href="img/gallery/theatre-shows06.jpg">
+              <img src="img/gallery/theatre-shows06.jpg" alt="Theatre Show">
             </a>
           </div>
 
           <!-- Classes Pics -->
           <div class="thumbnail iso-class">
-            <a href="img/gallery/classes01.JPG">
-              <img src="img/gallery/classes01.JPG" alt="Dance Class in Progress">
+            <a href="img/gallery/classes01.jpg">
+              <img src="img/gallery/classes01.jpg" alt="Dance Class in Progress">
             </a>
           </div>
 
           <div class="thumbnail iso-class">
-            <a href="img/gallery/classes02.JPG">
-              <img src="img/gallery/classes02.JPG" alt="Dance Class in Progress">
+            <a href="img/gallery/classes02.jpg">
+              <img src="img/gallery/classes02.jpg" alt="Dance Class in Progress">
             </a>
           </div>
 
@@ -151,8 +151,8 @@
           </div>
 
           <div class="thumbnail iso-class">
-            <a href="img/gallery/classes04.JPG">
-              <img src="img/gallery/classes04.JPG" alt="Dance Class in Progress">
+            <a href="img/gallery/classes04.jpg">
+              <img src="img/gallery/classes04.jpg" alt="Dance Class in Progress">
             </a>
           </div>
 
@@ -163,8 +163,8 @@
           </div>
 
           <div class="thumbnail iso-class">
-            <a href="img/gallery/classes06.JPG">
-              <img src="img/gallery/classes06.JPG" alt="Dance Class in Progress">
+            <a href="img/gallery/classes06.jpg">
+              <img src="img/gallery/classes06.jpg" alt="Dance Class in Progress">
             </a>
           </div>
 
