added jumbotron to all pages

--- a/about.html
+++ b/about.html
@@ -66,12 +66,15 @@
   <!-- You write code for this content block in another file -->
   
     <section>
-      <div class="container">
 
-        <h1>About</h1>
+      <div class="jumbotron">
         <div class="sub-title">
+          <h1>About</h1>
           <p>All of our fantastic team members are fully qualified to teach the Qual regulated syllabus from the ISTD and IDTA, and are DBS checked and fully insured.</p>
         </div>
+      </div>
+
+      <div class="container">
 
         <div class="about-section" data-aos="fade-up">
           <img class="teacher-img" src="img/teachers/k-durant.jpeg">
