--- a/classes.html
+++ b/classes.html
@@ -66,11 +66,16 @@
   <!-- You write code for this content block in another file -->
   
     <section>
-      <div class="container">
 
-        <h1>Classes</h1>
-        <p class="sub-title">Not sure what class to go for? Check out our range of dance styles below for a description of each class to help you choose.</p>
-        <p class="sub-title">Classes include Ballet, Tap, Street, Commercial, Jazz &amp; Disco, Baby Ballet, Musical Theatre, Drama, Ballroom and Latin.</p>
+      <div class="jumbotron">
+        <div class="sub-title">
+          <h1>Classes</h1>
+          <p>Not sure what class to go for? Check out our range of dance styles below for a description of each class to help you choose.</p>
+          <p>Classes include Ballet, Tap, Street, Commercial, Jazz &amp; Disco, Baby Ballet, Musical Theatre, Drama, Ballroom and Latin.</p>
+        </div>
+      </div>
+
+      <div class="container">
 
         <div id="classes-buttons">
           <button data-filter=".iso-ballet" class="btn">Ballet</button>
