--- a/gallery.html
+++ b/gallery.html
@@ -67,10 +67,10 @@
   
 
     <section>
-      <div class="container">
 
-        <h1>Gallery</h1>
+      <div class="jumbotron">  
         <div class="sub-title">
+          <h1>Gallery</h1>
           <p>
             Take a look at our pupils in action, including theatre shows, classes, events and competitions.
           </p>
@@ -78,6 +78,9 @@
             Click a thumbnail below to expand the image.
           </p>
         </div>
+      </div>
+
+      <div class="container">
 
         <div id="gallery-buttons">
           <button data-filter="*" class="btn">All</button>
