--- a/timetable.html
+++ b/timetable.html
@@ -67,30 +67,28 @@
   
 
     <section>
-      <div class="container">
 
-        <h1>Timetable</h1>
-
-        <div class="flex-row">
-          <img src="img/bus.jpg">
-          <div class="ttable-blurb">
-            <p>Standard Class Pricing:
-              <span class="ttable-price">30 minutes: £4</span>
-              <span class="ttable-price">45 minutes: £5.50</span>
-              <span class="ttable-price">1 hour: £7.50</span>
-            </p>
-            <p>
-              Discounts are given for termly payments and special offers are available.
-            </p>
-            <p>
-              Courses are available at David Lloyd centres. An average course of 12 weeks costs £66 for members. Non-members are welcome, please contact for more info regarding non-member pricing.
-            </p>
-            <p>
-              Click the buttons below for venue timetables.
-            </p>
-          </div>
+      <div class="jumbotron">
+        <div class="sub-title">
+          <h1>Timetable</h1>
+          <p>Standard Class Pricing:
+            <span class="ttable-price">30 minutes: £4</span>
+            <span class="ttable-price">45 minutes: £5.50</span>
+            <span class="ttable-price">1 hour: £7.50</span>
+          </p>
+          <p>
+            Discounts are given for termly payments and special offers are available.
+          </p>
+          <p>
+            Courses are available at David Lloyd centres. An average course of 12 weeks costs £66 for members. Non-members are welcome, please contact for more info regarding non-member pricing.
+          </p>
+          <p>
+            Click the buttons below for venue timetables.
+          </p>
         </div>
+      </div>
 
+      <div class="container">
 
         <div id="ttable-buttons">
           <button data-filter=".iso-htl" class="btn">Holy Trinity Lamorbey School</button>
