--- a/venues.html
+++ b/venues.html
@@ -67,10 +67,10 @@
   
 
     <section>
-      <div class="container">
 
-        <h1>Venues</h1>
+      <div class="jumbotron">
         <div class="sub-title">
+          <h1>Venues</h1>
           <p>
             The Dance School operates across three great venues in the Sidcup area.
           </p>
@@ -78,6 +78,9 @@
             Check out our maps below.
           </p>
         </div>
+      </div>
+
+      <div class="container">
 
         <div class="venue-item">
           <div class="venue-title">
