--- a/index.html
+++ b/index.html
@@ -72,20 +72,22 @@
         <div class="jumbotron-title">
           <img class="jumbo-logo" src="img/kt-dance-logo.png">
           <img class="jumbo-logo" src="img/just-dance.png">
-          <div class="jumbotron-blurb" data-aos="fade-left" data-aos-delay="800">
-            <p>
-              The Dance School offers exciting classes in Ballet, Tap, Street, Modern Jazz, Commercial, Disco, Musical Theatre, Drama, Ballroom and Latin.
-            </p>
-          </div>
-          <div class="jumbotron-blurb" data-aos="fade-left" data-aos-delay="1100">
-            <p>
-              Pupils are offered the chance to train towards ISTD and IDTA examinations, Theatre Shows, Festivals and Competitions.
-            </p>
-            <div class="exam-board-logos">
-              <a href="http://istd.org"><img src="img/istd-logo.jpg"></a>
-              <a href="http://idta.co.uk"><img src="img/idta-logo.gif"></a>
+          <div class="jumbotron-blurb-container">
+            <div class="jumbotron-blurb" data-aos="fade-left" data-aos-delay="800">
+              <p>
+                The Dance School offers exciting classes in Ballet, Tap, Street, Modern Jazz, Commercial, Disco, Musical Theatre, Drama, Ballroom and Latin.
+              </p>
             </div>
-          </div>
+            <div class="jumbotron-blurb" data-aos="fade-left" data-aos-delay="1100">
+              <p>
+                Pupils are offered the chance to train towards ISTD and IDTA examinations, Theatre Shows, Festivals and Competitions.
+              </p>
+              <div class="exam-board-logos">
+                <a href="http://istd.org"><img src="img/istd-logo.jpg"></a>
+                <a href="http://idta.co.uk"><img src="img/idta-logo.gif"></a>
+              </div>
+            </div>
+          </div><!-- .jumbotron-blurb-container end -->
         </div>
 
       </div><!-- .container end -->
@@ -99,7 +101,7 @@
       <div class="row">
 
         <div class="intro-section intro-section-1">
-          <div class="intro-blurb" data-aos="fade-up">
+          <div class="intro-blurb">
             <a class="btn" href="classes.html" role="button">Classes</a>
             <p>
               Classes are designed to suit all levels, ages and experience. We are dedicated to the art of performance, whether you would like to perform on a West end stage or just dance for fun, we aspire to cover all needs and dreams.
