Added testimonials page

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
         <div class="sub-title">
           <h1>About</h1>
           <p>All of our fantastic team members are fully qualified to teach the Qual regulated syllabus from the ISTD and IDTA, and are DBS checked and fully insured.</p>
+          <p>See what people are saying about The Dance School. <a class="test-link" href="testimonials.html">Read our testimonials.</a></p>
         </div>
       </div>
 
