--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="KT The Dance School" content="KT The Dance School,KT School of Dance,Bexleyheath Dance School,dance school,dance lessons,bexleyheath dance lessons,">
+
 
   <title>KT The Dance School</title>
 
