Added fb widget, added more teacher info, fixed classes styling

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           <a class="header-social-icon" href="mailto:info@ktthedanceschool.co.uk">
             <i class="fa fa-envelope"></i>
           </a>
-          <a class="header-social-icon" href="https://www.facebook.com/groups/22621962120/?fref=ts">
+          <a class="header-social-icon" href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
           </a>
         </div><!-- .header-social end -->
@@ -66,19 +66,29 @@
         <div class="sub-title">
           <h1>About</h1>
           <p>All of our fantastic team members are fully qualified to teach the Qual regulated syllabus from the ISTD and IDTA, and are DBS checked and fully insured.</p>
+          <p>Scroll down to meet our fantastic teachers.</p>
           <p>See what people are saying about The Dance School. <a class="test-link" href="testimonials.html">Read our testimonials.</a></p>
         </div>
       </div>
 
       <div class="container">
 
-        <div class="about-section" data-aos="fade-up">
+        <div class="about-section">
           <img class="teacher-img" src="img/teachers/k-durant.jpeg">
           <div>
             <h2>Katie Durant - AISTD, AIDTA</h2>
             <p>Katie Durant trained at Italia Conti Academy of Performing Arts, whilst there she gained many Qualifications, including the Italia Conti Diploma in Performing Arts and Advanced levels in Ballet, Tap and Modern. Professional work over this time includes The Childrens Royal Variety Performance, Step into Ballet with Wayne Sleep and the well publicized "Ghost from a perfect place" by Phillip Ridley and is proud to be listed in the Metheun edition as the original Miss Kerosene. After Graduating Katie was lucky enough to work as a Dancer in France, Holland and Japan before returning home in 1999. Katie then used her Associate qualifications to become a Dance teacher which she has always loved, working with local Dance Schools and Primary Schools.</p>
             <p>Katie established "The Dance School" in 2003 and is proud of an 100% pass rate with all candidates she has entered with the ISTD and IDTA. "The Dance School" also has a record of extremely high exam results with lots of Children gaining Honours or Highly Commemded (over 85%).</p>
             <p>Katie is also very proud of the Theatre shows "The Dance School" has produced such as "School Rules"@ Rose theatre (2009), Sidcup, Dance Doctor, Mick Jagger Centre (2007), Dartford, A-Z of Dance (2006), Musicality (2004), Sevenoaks Playhouse and Performances at Danson Festival.</p>
+          </div>
+        </div>
+
+        <div class="about-section" data-aos="fade-up">
+          <img class="teacher-img" src="img/teachers/s-payne.jpeg">
+          <div>
+            <h2>Sophie Payne</h2>
+            <p>Sophie started dancing at the age of five. Sophie trained at Reynolds Performing Arts Academy and grew with their dance school. Sophie completed a three year dance diploma with Reynolds. She also gained: NVQ Level 2- Activity Leadership in Dance, NVQ Level 2- Exercise and Fitness, , 1st 4 Sport Level 2- Recreation and Allied Occupations, Industry and Organisational Awareness and Advanced levels in Ballet, Tap and Modern ISTD. Aswell as working towards her FDI and Associate levels with the IDTA and ISTD. Sophie was honoured when Reynolds chose her as a teacher for their Saturday classes.</p>
+            <p>Credits include; 'Move it' - Company Dancer - Choreographer Sarah Drummond, M.D Annemarie Lewis Thomas, 'Hope of the States' (Music video), 'Red Blood Meridian' as the Lead Russian factory worker and Sasoon Style hair cuts for Chris Evans.</p>
           </div>
         </div>
 
@@ -101,30 +111,33 @@
   <footer class="footer">
     <div class="container">
 
+      <div>
+        <div class="footer-social-icons">
+          <a href="tel:07949216364">
+            <i class="fa fa-phone social"></i>
+            07949216364
+          </a>
+          <a href="mailto:info@ktthedanceschool.co.uk">
+            <i class="fa fa-envelope social"></i>
+            info@ktthedanceschool.co.uk
+          </a>
+          <a href="https://www.facebook.com/ktthedanceschool/">
+            <i class="fa fa-facebook-square"></i>
+            Find us on Facebook
+          </a>
+        </div>
+
+        <img class="footer-logo" src="img/kt-dance-logo.png">
+      </div>
+
       <div class="fb-iframe-container">
-
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
       </div>
 
-      <div class="footer-social-icons">
-        <a href="tel:07949216364">
-          <i class="fa fa-phone social"></i>
-          07949216364
-        </a>
-        <a href="mailto:info@ktthedanceschool.co.uk">
-          <i class="fa fa-envelope social"></i>
-          info@ktthedanceschool.co.uk
-        </a>
-        <a href="https://www.facebook.com/groups/22621962120/?fref=ts">
-          <i class="fa fa-facebook-square"></i>
-          Find us on Facebook
-        </a>
-      </div>
+    </div><!-- end .container -->
 
-      <img class="footer-logo" src="img/kt-dance-logo.png">
+    <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
 
-      <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
-
-    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
