--- a/classes.html
+++ b/classes.html
@@ -39,7 +39,7 @@
           <a class="header-social-icon" href="mailto:info@ktthedanceschool.co.uk">
             <i class="fa fa-envelope"></i>
           </a>
-          <a class="header-social-icon" href="https://www.facebook.com/groups/22621962120/?fref=ts">
+          <a class="header-social-icon" href="https://www.facebook.com/ktthedanceschool/">
             <i class="fa fa-facebook-square"></i>
           </a>
         </div><!-- .header-social end -->
@@ -202,30 +202,33 @@
   <footer class="footer">
     <div class="container">
 
+      <div>
+        <div class="footer-social-icons">
+          <a href="tel:07949216364">
+            <i class="fa fa-phone social"></i>
+            07949216364
+          </a>
+          <a href="mailto:info@ktthedanceschool.co.uk">
+            <i class="fa fa-envelope social"></i>
+            info@ktthedanceschool.co.uk
+          </a>
+          <a href="https://www.facebook.com/ktthedanceschool/">
+            <i class="fa fa-facebook-square"></i>
+            Find us on Facebook
+          </a>
+        </div>
+
+        <img class="footer-logo" src="img/kt-dance-logo.png">
+      </div>
+
       <div class="fb-iframe-container">
-
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fktthedanceschool&tabs&width=340&height=214&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="214" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
       </div>
 
-      <div class="footer-social-icons">
-        <a href="tel:07949216364">
-          <i class="fa fa-phone social"></i>
-          07949216364
-        </a>
-        <a href="mailto:info@ktthedanceschool.co.uk">
-          <i class="fa fa-envelope social"></i>
-          info@ktthedanceschool.co.uk
-        </a>
-        <a href="https://www.facebook.com/groups/22621962120/?fref=ts">
-          <i class="fa fa-facebook-square"></i>
-          Find us on Facebook
-        </a>
-      </div>
+    </div><!-- end .container -->
 
-      <img class="footer-logo" src="img/kt-dance-logo.png">
+    <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
 
-      <p class="copyright">Website created by <a href="http://nick-bushby.com">Nick Bushby.</a> Copyright &copy; <span id="year"></span></p>
-
-    </div>
   </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
