updated teacher blurbs

--- a/about.html
+++ b/about.html
@@ -84,11 +84,12 @@
         </div>
 
         <div class="about-section" data-aos="fade-up">
-          <img class="teacher-img" src="img/teachers/s-payne.jpeg">
+          <img class="teacher-img" src="img/teachers/s-payne.jpg">
           <div>
-            <h2>Sophie Payne</h2>
-            <p>Sophie started dancing at the age of five. Sophie trained at Reynolds Performing Arts Academy and grew with their dance school. Sophie completed a three year dance diploma with Reynolds. She also gained: NVQ Level 2- Activity Leadership in Dance, NVQ Level 2- Exercise and Fitness, , 1st 4 Sport Level 2- Recreation and Allied Occupations, Industry and Organisational Awareness and Advanced levels in Ballet, Tap and Modern ISTD. Aswell as working towards her FDI and Associate levels with the IDTA and ISTD. Sophie was honoured when Reynolds chose her as a teacher for their Saturday classes.</p>
-            <p>Credits include; 'Move it' - Company Dancer - Choreographer Sarah Drummond, M.D Annemarie Lewis Thomas, 'Hope of the States' (Music video), 'Red Blood Meridian' as the Lead Russian factory worker and Sasoon Style hair cuts for Chris Evans.</p>
+            <h2>Sophie Lorraine Payne - LISTD, BBO Level 4 TQ Commercial Theatre</h2>
+            <p>Sophie is goal driven, creative, enthusiastic and innovative artist of the dance world with competence in all styles of dance and syllabi with the ability and confidence to adapt.  Sophie has a drive to choreograph powerful, unforgettable dance routines that are both enjoyable and engaging for both the performers and audience.</p>
+            <p>Sophie began dancing at five years old taking Ballet and Modern Jazz Theatre classes and a few years later trained in Tap, Street Jazz and Musical Theatre alongside these. Upon leaving school Sophie studied at Reynolds Performing Arts College where she trained to Advanced 1 and 2 in Ballet, Tap and Modern with the ISTD. During her time at Reynolds; Sophie completed her Dance Diploma, BTEC Level 3 in Sport (Performance and Excellence), NVQ Level 3 in Sports Performance, NVQ Level 2-Activity Leadership in Dance and NVQ Level 2- Exercise and Fitness (Gym Based Exercise). Upon Sophie’s graduation and after having assisted dance classes for 5 years she embarked on her teaching career, instructing various dance styles and syllabi. Alongside her teaching work Sophie studied for her Licentiate in Freestyle Dance (ISTD) and has since gained her Level 4 BBO TQ and Intermediate British Gymnastics TQ. Sophie now has over eight years’ experience teaching various dance genres, Musical Theatre and curriculum dance and gymnastics.</p>
+            <p>Sophie loves teaching dance, from a young age it has been her dream to feed that passion onto others, see her students thrive and consequently reach their full potential. Sophie aims for her classes to be fun yet disciplined allowing her students to aspire to work hard and to reach their personal goals.</p>
           </div>
         </div>
 
