Updated text content across site

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       <div class="jumbotron">
         <div class="sub-title">
           <h1>About</h1>
-          <p>All of our fantastic team members are fully qualified to teach the Qual regulated syllabus from the ISTD and IDTA, and are DBS checked and fully insured.</p>
+          <p>Our fantastic team of teachers are fully qualified, DBS checked and insured. Pupils can work towards examinations in all the genres we offer. We offer tests with the ISTD and IDTA. These examination bodies are recognised by the CDET (Council of Dance Teachers) and offer Ofqual regulated tests.</p>
           <p>Scroll down to meet our fantastic teachers.</p>
           <p>See what people are saying about The Dance School. <a class="test-link" href="testimonials.html">Read our testimonials.</a></p>
         </div>
@@ -76,10 +76,25 @@
         <div class="about-section">
           <img class="teacher-img" src="img/teachers/k-durant.jpeg">
           <div>
-            <h2>Katie Durant - AISTD, AIDTA</h2>
-            <p>Katie Durant trained at Italia Conti Academy of Performing Arts, whilst there she gained many Qualifications, including the Italia Conti Diploma in Performing Arts and Advanced levels in Ballet, Tap and Modern. Professional work over this time includes The Childrens Royal Variety Performance, Step into Ballet with Wayne Sleep and the well publicized "Ghost from a perfect place" by Phillip Ridley and is proud to be listed in the Metheun edition as the original Miss Kerosene. After Graduating Katie was lucky enough to work as a Dancer in France, Holland and Japan before returning home in 1999. Katie then used her Associate qualifications to become a Dance teacher which she has always loved, working with local Dance Schools and Primary Schools.</p>
-            <p>Katie established "The Dance School" in 2003 and is proud of an 100% pass rate with all candidates she has entered with the ISTD and IDTA. "The Dance School" also has a record of extremely high exam results with lots of Children gaining Honours or Highly Commemded (over 85%).</p>
-            <p>Katie is also very proud of the Theatre shows "The Dance School" has produced such as "School Rules"@ Rose theatre (2009), Sidcup, Dance Doctor, Mick Jagger Centre (2007), Dartford, A-Z of Dance (2006), Musicality (2004), Sevenoaks Playhouse and Performances at Danson Festival.</p>
+            <h2>Katie Durant - AISTD, IDTAL4DIp, AIDTA</h2>
+            <p>Katie Durant trained at the famous Italia Conti Academy of Performing arts full time from the ages of 14-19 years old. During this time she gained many qualifications, including the Italia Conti National Diploma in Performing Arts, Advanced levels in Ballet, Tap and Modern plus Associate teaching qualifications.
+Highlights of her professional work over this time includes The Children's Royal Variety Performance, Step into Ballet with Wayne Sleep and the well publicised play "Ghost from a Perfect Place" by multi award-winning playwright Phillip Ridley. The 90's play celebrated 20 years in 2014 and with a revival in the Arcola Theatre and Katie is proud to be listed in the Methuen edition of the book as the original Miss Kerosene.
+After graduating Katie gained contracts as a dancer working in France, Holland and Japan returning from her travels in 1999.  Katie then used her Associate qualifications  to become a dance teacher which she has always loved working with local Dance Schools and Primary Schools.</p>
+            <p>Katie established "The Dance School" in 2003 and is proud of what the pupils and school have achieved over this time. Pupils can take exams with the ISTD and IDTA in all the genres that we teach in both Dance sport and Theatre faculties. Katie is proud of the excellent pass rates over this time.</p>
+            <p>
+              Katie is also very proud of the Theatre shows "The Dance School" has produced:
+              <ul>
+                <li>Cirque du Dance- The Mick Jagger Centre, 2016</li>
+                <li>10 Years of "The Dance School"- The Woodville, 2014</li>
+                <li>Christmas Capers- The Mick Jagger Centre, 2012</li>
+                <li>School Rules- The Rose Theatre, 2009</li>
+                <li>Dance Doctor- The Mick Jagger Centre, 2007</li>
+                <li>A-Z of Dance- The Stag Theatre, 2006</li>
+                <li>Musicality- Sevenoaks Playhouse, 2004</li>
+              </ul>
+            </p>
+            <p>Katie has choreographed pieces for Rochester Cathedral Schools festival , Her Majesty's Theatre and Sadler's Wells. Competition wise Katie has taught National and Area competition winners.
+Proudest teaching moments: being invited to Dance in Trafalgar Square in connection to the Patrons Lunch, dancing in the Speigeltent, Blackheath Common in connection to the Olympics.</p>
           </div>
         </div>
 
