--- a/classes.html
+++ b/classes.html
@@ -90,8 +90,11 @@
             </div>
             <div>
               <div class="classes-item-blurb">
-                <p class="classes-ages">Ages 4 - 16</p>
-                <p>These classes build strength, stamina, good posture and fluidity of movement. Ballet is a beautiful dance style, creating long lean muscles from the disciplined techniques.</p>
+                <p class="classes-ages">Ages 4 - 19</p>
+                <p>Pupils follow the IDTA ballet grades syllabus.
+                Ballet is a great for building, strength, stamina, good posture and fluidity of movement. Ballet is a disciplined and technical dance style, pupils build confidence by taking OFQUAL regulated tests and also are given the opportunity to showcase their talents in shows and events.</p>
+                <p>Pupils can take Rosettes, Medals or Grade examinations.
+                </p>
               </div>
               <div class="btn">
                 <a href="timetable.html">
@@ -109,7 +112,7 @@
             <div>
               <div class="classes-item-blurb">
                 <p class="classes-ages">Ages 2 1/2 - 4</p>
-                <p>Classes are themed around our class mascot Dancing Bear, flashcards, Dancing Bear songs and exercises. Children will learn their first rudiments of ballet.</p>
+                <p>Children will learn their first rudiments of ballet in a fun way, using different themes of the week, props to inspire learning. The little Dancers have a great time and are kept interested by using themes such as Princess week, Nature week, Teddy Bear, Sporty week, Birthday, Christmas, Easter etc.</p>
               </div>
               <div class="btn">
                 <a href="timetable.html">
@@ -129,6 +132,7 @@
                 <p class="classes-ages">All ages</p>
                 <p>Learn the Waltz, Quickstep, Foxtrot and Tango; classic styles that are showcased on popular TV programmes like 'Strictly Come Dancing'. Dancing with a partner is a great skill to develop for socialising with new partners or choreographing a wedding dance.</p>
                 <p>Or learn the Cha Cha, Rumba, Jive and Samba. Latin dancing is an energetic partner dance that is great for socialising as well as keeping in shape.</p>
+                <p>Opportunities to take part in events and take ISTD examinations.</p>
               </div>
               <div class="btn">
                 <a href="timetable.html">
@@ -140,13 +144,16 @@
 
           <div class="classes-item iso-commercial">
             <div>
-              <h2>Commercial Disco and Street</h2>
+              <h2>Commercial and Street Jazz</h2>
               <img src="img/classes/commercial.jpg">
             </div>
             <div>
               <div class="classes-item-blurb">
                 <p class="classes-ages">All Ages</p>
-                <p>Street dance is covered within "The Dance School" Disco Street dance classes. Examination can be taken with ISTD and ITDA. We also offer a boys only class.</p>
+                <p>Pupils learn moves to the trendiest popular music.
+                Learn cool funky moves as seen on screen. Style diversity within the classes as lots of different moods, speeds and dynamics according to the chosen music.
+                Pupils can progress to take exams and take part in our shows/events.
+                </p>
               </div>
               <div class="btn">
                 <a href="timetable.html">
@@ -165,6 +172,7 @@
               <div class="classes-item-blurb">
                 <p class="classes-ages">Ages 7 and above</p>
                 <p>This class will enable children to have fun learning the songs, dances and lyrics of their favourite musicals. These classes are also great for developing a childs confidence and imagination.</p>
+                <p>The acting in Musical Theatre links our theatre shows so the Actors have an opportunity to play lead roles. Pupils can also work towards Musical Theatre exams.</p>
               </div>
               <div class="btn">
                 <a href="timetable.html">
