--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
           <button data-filter=".iso-theatre" class="btn">Theatre Shows</button>
           <button data-filter=".iso-class" class="btn">Classes</button>
           <button data-filter=".iso-events" class="btn">Events</button>
-          <button data-filter=".iso-exams" class="btn">Competitions and Exams</button>
+          <button data-filter=".iso-exams" class="btn">Exams</button>
         </div>
 
         <div class="img-gallery">
