--- a/testimonials.html
+++ b/testimonials.html
@@ -73,38 +73,26 @@
       <div class="container">
 
         <div class="test-item">
-          <p>Chris Tibby</p>
-          <p>"Love having all the 3 classes in one evening. Megan really enjoys them."</p>
+          <p>Sharon Ann Hayes - Facebook</p>
+          <p>"The Dance School is fantastic! My daughter danced with the school from the age of 6 until 18 and loved it. So much so, she is now pursuing a career in dance. They have amazing teachers (especially, in my opinion, Katie herself and Sophie Payne). All the teachers are really strong on technique, which has stood my daughter in good stead and earned her great feedback as she has advanced in auditions etc. But, the beauty is it's fun too!! There's a warmth and kindness to the atmosphere of the school that comes from Katie. The pupils can not only do all their grade exams but also get the chance to perform at the school's annual show as well as various festivals/showcases etc. I honestly could not be more proud that we have been part of 'The Dance School' "</p>
           <hr>
         </div>
 
         <div class="test-item">
-          <p>Linda Johnson</p>
-          <p>"Very pleased with the classes and thanks for giving the children the opportunity to perform in the West end in April. The prior show at the Rose Theatre, Lamorbey, Sidcup was fantastic. Alot of effort has gone into the shows."</p>
+          <p>Sara Gibbons - Facebook</p>
+          <p>"An amazing dance school that my daughter has been attending for years since she was younger! The school has amazing teachers that are both professional and friendly. It is a school that I would highly recommend for anyone who is interested in dance of any age!"</p>
+          <hr>
+        </div>
+
+        <div class="test-item">
+          <p>Julie Malpass - Mumsnet</p>
+          <p>"  "</p>
           <hr>
         </div>
 
         <div class="test-item">
           <p>Jenny Oliver</p>
-          <p>"Very impressed. I'm pleased Naomi is formally learning Ballet i.e names of positions and steps not just Ballet style dancing. I'm very impressed that this young group achieved so well in the show and more importantly really enjoyed it. So did I both watching and helping."</p>
-          <hr>
-        </div>
-
-        <div class="test-item">
-          <p>Sally Edwards</p>
-          <p>"Anna is always very happy to attend her classes. It has boosted her confidence."</p>
-          <hr>
-        </div>
-
-        <div class="test-item">
-          <p>Sophie Payne(Teacher)</p>
-          <p>"I love teaching and nothing feels better than watching your pupils improve and talents sore high. Teaching makes me feel proud and it never feels like work. I enjoy working with all ages and levels and wish to teach forever more as this is my passion. Also to eventually have my own dance school. 'Dreams keep us alive, so never stop reaching for the star within you' "</p>
-          <hr>
-        </div>
-
-        <div class="test-item">
-          <p>T J Powell</p>
-          <p>"A good level of teaching, the classes should ensure they cater for the ability of the Pupils.A fun and encouraging environment for the girls to learn."</p>
+          <p>"  "</p>
           <hr>
         </div>
 
