--- a/timetable.html
+++ b/timetable.html
@@ -107,12 +107,12 @@
                 <tr>
                   <td>Monday</td>
                   <td>4:30 - 5:00</td>
-                  <td>Preparatory Tap (Monday and Tuesday Prep classes can be joined as a single ballet or tap.)</td>
+                  <td>Preparatory Tap</td>
                 </tr>
                 <tr>
                   <td>Monday</td>
                   <td>5:00 - 5:30</td>
-                  <td>Preparatory Ballet (Monday and Tuesday Prep classes can be joined as a single ballet or tap.)</td>
+                  <td>Preparatory Ballet</td>
                 </tr>
                 <tr>
                   <td>Monday</td>
@@ -132,22 +132,22 @@
                 <tr>
                   <td>Tuesday</td>
                   <td>4:30 - 5:00</td>
-                  <td>Preparatory Tap (Monday and Tuesday Prep classes can be joined as a single ballet or tap.)</td>
+                  <td>Preparatory Tap</td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
                   <td>5:00 - 5:30</td>
-                  <td>Preparatory Ballet (Monday and Tuesday Prep classes can be joined as a single ballet or tap.)</td>
+                  <td>Preparatory Ballet</td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
                   <td>5:30 - 6:00</td>
-                  <td>Primary Ballet (Primary classes can be joined as a single ballet or tap.)</td>
+                  <td>Primary Ballet</td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
                   <td>6:00 - 6:30</td>
-                  <td>Primary Tap (Primary classes can be joined as a single ballet or tap.)</td>
+                  <td>Primary Tap</td>
                 </tr>
                 <tr>
                   <td>Tuesday</td>
