--- a/venues.html
+++ b/venues.html
@@ -96,6 +96,7 @@
         <div class="venue-item">
           <div class="venue-title">
             <div>
+              <img class="dl-logo" src="img/david-lloyd-logo.png" alt="David Lloyd logo">
               <h2>
                 David Lloyd Kidbrooke Village
               </h2>
@@ -112,6 +113,7 @@ src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJy5cV5Map2EcRr0iYe
         <div class="venue-item">
           <div class="venue-title">
             <div>
+              <img class="dl-logo" src="img/david-lloyd-logo.png" alt="David Lloyd logo">
               <h2>
                 David Lloyd Sidcup
               </h2>
