update about-page and timetable info

--- a/timetable.html
+++ b/timetable.html
@@ -207,17 +207,22 @@
                 <tr>
                   <td>Wednesday</td>
                   <td>4:30 - 5:00</td>
-                  <td>Ballroom and Latin Ages 5-8</td>
+                  <td>Rosette Ballet Ages 4-6</td>
                 </tr>
                 <tr>
                   <td>Wednesday</td>
-                  <td>5:00 - 5:45</td>
-                  <td>Musical Theatre</td>
+                  <td>5:00 - 5:30</td>
+                  <td>Preparatory Tap Ages 4-7</td>
                 </tr>
                 <tr>
                   <td>Wednesday</td>
-                  <td>5:45 - 6:30</td>
-                  <td>Ballroom and Latin</td>
+                  <td>5:30 - 6:00</td>
+                  <td>Musical Theatre Ages 5+</td>
+                </tr>
+                <tr>
+                  <td>Wednesday</td>
+                  <td>6:00 - 6:30</td>
+                  <td>Ballroom and Latin Ages 11+</td>
                 </tr>
                 <tr>
                   <td>Friday</td>
