--- a/testimonials.html
+++ b/testimonials.html
@@ -74,7 +74,8 @@
 
         <div class="test-item">
           <p>Sharon Ann Hayes - Facebook</p>
-          <p>"The Dance School is fantastic! My daughter danced with the school from the age of 6 until 18 and loved it. So much so, she is now pursuing a career in dance. They have amazing teachers (especially, in my opinion, Katie herself and Sophie Payne). All the teachers are really strong on technique, which has stood my daughter in good stead and earned her great feedback as she has advanced in auditions etc. But, the beauty is it's fun too!! There's a warmth and kindness to the atmosphere of the school that comes from Katie. The pupils can not only do all their grade exams but also get the chance to perform at the school's annual show as well as various festivals/showcases etc. I honestly could not be more proud that we have been part of 'The Dance School' "</p>
+          <p>"The Dance School is fantastic! My daughter danced with the school from the age of 6 until 18 and loved it. So much so, she is now pursuing a career in dance. They have amazing teachers (especially, in my opinion, Katie herself and Sophie Payne). All the teachers are really strong on technique, which has stood my daughter in good stead and earned her great feedback as she has advanced in auditions etc. But, the beauty is it's fun too!!"</p>
+          <p>"There's a warmth and kindness to the atmosphere of the school that comes from Katie. The pupils can not only do all their grade exams but also get the chance to perform at the school's annual show as well as various festivals/showcases etc. I honestly could not be more proud that we have been part of 'The Dance School' "</p>
           <hr>
         </div>
 
@@ -85,14 +86,16 @@
         </div>
 
         <div class="test-item">
-          <p>Julie Malpass - Mumsnet</p>
-          <p>"  "</p>
+          <p>Julie Moore</p>
+          <p>"My daughters have been dancing with Katie for over 4 years now since they were 6 and 8. They absolutely love it. Katie has helped them to develop their dancing ability and I have watched their confidence grow extensively."</p>
+          <p>"She has given them some amazing opportunities.  They performed at Trafalgar Square for the Queens jubilee which they enjoyed so much. They have also performed at the orchard theatre with a full audience and experienced what it feels like to be a professional dancer."</p>
+          <p>"Katie has always encouraged the girls to participate in ISTD dance exams but it is not essential if they don't want to do it. KT the dance school is a place of fun, exercise, opportunity to make new friends and most importantly  to learn some great dance moves!"</p>
           <hr>
         </div>
 
         <div class="test-item">
-          <p>Jenny Oliver</p>
-          <p>"  "</p>
+          <p>Val Zoe</p>
+          <p>"All three of my daughters have danced through KT Dance and my youngest at 12 is still loving it, ballet, tap, street and troop. She finds them all challenging and fun and loves performing at the shows and the rewards of the examinations. I would highly recommend this friendly dance school for all ages and abilities."</p>
           <hr>
         </div>
 
