blur banner img

--- a/venues.html
+++ b/venues.html
@@ -81,7 +81,7 @@
           <div class="venue-title">
             <div>
               <h2>
-                Holy Trinity Lamborey School
+                Holy Trinity Lamorbey School
               </h2>
               <p>
                 Burnt Oak Lane, DA15 9DB
