updated venue blurb

--- a/venues.html
+++ b/venues.html
@@ -67,7 +67,10 @@
         <div class="sub-title">
           <h1>Venues</h1>
           <p>
-            The Dance School operates across three great venues in the Sidcup area.
+            Lunchtime, after school clubs and curriculum based classes running from schools in Bexley and Greenwich.
+          </p>
+          <p>
+            After school classes are held in venues in the Bexley and Greenwich boroughs.
           </p>
           <p>
             Check out our maps below.
