--- a/classes.html
+++ b/classes.html
@@ -7,11 +7,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The Dance School provides fun and friendly dance lessons in the Sidcup area; across a range of styles, and for all ages and abilities.">
+  <meta name="description" content="The Dance School provides fun and friendly dance lessons in Bexley, Sidcup and Greenwich; across a range of styles, and for all ages and abilities.">
   <link rel="canonical" href="http://ktthedanceschool.co.uk/">
   <meta name="google-site-verification" content="tQvEBrfMVZG-t5flvSHNjZTDsSiSmtjLkFIyzzJCBCE">
 
-  <title>KT The Dance School | Dance Lessons for all ages and abilities, based in the Sidcup area</title>
+  <title>KT The Dance School | Dance Lessons for all ages and abilities, classes are run in the Bexley, Sidcup and Greenwich areas</title>
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="css/aos.css">
